# serdes_turn

./: README.md  copyright  meson.build  meson_options.txt  serdes_turn.doxygen
source/: serdes_turn_deg.c  serdes_turn_deg.h
test/: Makefile  test_serdes_turn_deg.c
utils/: conv_doxygen_config_for_man  generate_man
